--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,8 @@
     <title>Home</title>
 </head>
 <body>
-    <div data-wow-delay="0.2s"  class="header wow zoomIn">
+    <div style="height: 1px;"></div>
+    <div data-wow-delay="0.2s"  class="header wow bounceIn">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
@@ -113,7 +114,7 @@
         </div>
         <div class="container">
             <div>
-                <div data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div id="item1" data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-leadership-certificate-programme.html">
                         <div class="image">
                             <img src="../image/image1.svg" alt="">
@@ -123,7 +124,7 @@
                         </div>
                     </a>
                 </div>
-                <div data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div id="item2" data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-diploma-in-leadership-programme.html">
                         <div class="image">
                             <img src="../image/image2.svg" alt="">
@@ -133,7 +134,7 @@
                         </div>
                     </a>
                 </div>
-                <div data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div id="item3" data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-master-of-leadership-programme.html">
                         <div class="image">
                             <img src="../image/image3.svg" alt="">
@@ -143,7 +144,7 @@
                         </div>
                     </a>
                 </div>
-                <div data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div id="item4" data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-doctorate-programme-in-leadership.html">
                         <div class="image">
                             <img src="../image/image4.svg" alt="">
@@ -156,7 +157,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div id="xxx">
         <div data-wow-delay="0.2s" class="managament-programmes wow fadeInUp">
             <div class="text-content-in-image">
                 Wordington Management Programmes
@@ -168,7 +169,7 @@
         <div class="container">
             <div>
                 <div data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
-                    <a href="wordington-certificate-programme-in-human-resource-management.html">
+                    <a id="item5" href="wordington-certificate-programme-in-human-resource-management.html">
                         <div class="image">
                             <img src="../image/image5.svg" alt="">
                         </div>
@@ -177,7 +178,7 @@
                         </div>
                     </a>
                 </div>
-                <div data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div id="item6" data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-diploma-in-human-resource-management-programme.html">
                         <div class="image">
                             <img src="../image/image6.svg" alt="">
@@ -187,7 +188,7 @@
                         </div>
                     </a>
                 </div>
-                <div data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div id="item7" data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-master-of-human-resource-management-programme.html">
                         <div class="image">
                             <img src="../image/image7.svg" alt="">
@@ -197,7 +198,7 @@
                         </div>
                     </a>
                 </div>
-                <div data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div id="item8" data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-doctorate-programme-in-human-resource-management.html">
                         <div class="image">
                             <img src="../image/image8.svg" alt="">
@@ -221,7 +222,7 @@
         </div>
         <div class="container">
             <div>
-                <div data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div id="item9" data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-certificate-programme-in-biblical-studies.html">
                         <div class="image">
                             <img src="../image/image9.svg" alt="">
@@ -231,7 +232,7 @@
                         </div>
                     </a>
                 </div>
-                <div data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div id="item10" data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-diploma-in-biblical-leadership.html">
                         <div class="image">
                             <img src="../image/image10.svg" alt="">
@@ -241,7 +242,7 @@
                         </div>
                     </a>
                 </div>
-                <div data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div id="item11" data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-graduate-programme-in-biblical-studies.html">
                         <div class="image">
                             <img src="../image/image11.svg" alt="">
@@ -251,13 +252,13 @@
                         </div>
                     </a>
                 </div>
-                <div data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div id="item12" data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-doctorate-programme-in-biblical-studies.html">
                         <div class="image">
                             <img src="../image/image12.svg" alt="">
                         </div>
                         <div>
-                            Wordington Doctorate Programme in Human Resource Management.
+                            Wordington Doctorate Programme in Biblical studies
                         </div>
                     </a>
                 </div>
@@ -273,7 +274,7 @@
             </div>
         </a>
         <div class="container item-alone">
-            <div data-wow-delay="0.2s" class="col-xs-12 col-sm-12 col-md-8 item-category wow fadeInUp">
+            <div id="item13" data-wow-delay="0.2s" class="col-xs-12 col-sm-12 col-md-8 item-category wow fadeInUp">
                 <a href="wordington-health-and-nursing-programmes.html">
                     <div class="image-1">
                         <img src="../image/cccccc.svg" alt="">
@@ -287,7 +288,7 @@
     </div>
     <div>
         <a href="wordington-international-english-communication-programme.html">
-            <div data-wow-delay="0.3s" class="international wow fadeInUp">
+            <div id="item14" data-wow-delay="0.3s" class="international wow fadeInUp">
                 <div class="text-content-in-image">
                     Wordington International English Communication Programme
                 </div>
@@ -323,14 +324,15 @@
     function closeMenu() {
         show.style.right = "-250px";
     }
-    new WOW().init();
+    
     function scrollToElement(parentSelector, targetSelector, offsetTop) {
         $(parentSelector).animate({
-            scrollTop: $(targetSelector).offset().top - (offsetTop ? offsetTop : 0)
-        }, 1000, function () {
+             scrollTop: $(targetSelector).offset().top - (offsetTop ? offsetTop : 0)
+        }, 1300, function () {
         });
          closeMenu();
     }
+    new WOW().init();
     function scrollToElementNew(parentSelector, targetSelector, offsetTop) {
         $(parentSelector).animate({
             scrollTop: $(targetSelector).offset().top - (offsetTop ? offsetTop : 0) - $(targetSelector).height() / 5
@@ -350,4 +352,5 @@
             showText.style.display = 'block';
         }
     }
+    // setTimeout(() => window.location.hash = '' , 2000);
 </script>
