--- a/html/wordington-certificate-programme-in-human-resource-management.html
+++ b/html/wordington-certificate-programme-in-human-resource-management.html
@@ -10,14 +10,16 @@
     <link rel='stylesheet' href='../css/animate.min.css'>
     <script src='../js/wow.min.js'></script>
     <script src="../js/font.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader5 wow bounceInDown">
+    <div class="itemHeader5 wow bounceIn">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-link" id="nav-link">
-                    <a href="index.html">Home</a>
+                    <a href="index.html#item5">Home</a>
                 </div>
             </div>
         </div>
