--- a/html/about-us.html
+++ b/html/about-us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,17 +13,18 @@
     <script src='../js/wow.min.js'></script>
     <link rel="stylesheet" href="../css/leaderShip.css">
 </head>
+
 <body>
-    <div class="about-us wow bounceInDown">
+    <div class="about-us wow bounceIn">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
-                        <a href="index.html" >Home</a>
+                    <a href="index.html">Home</a>
                 </div>
             </div>
         </div>
         <div class="xxx12">
-           ABOUT-US
+            ABOUT-US
         </div>
     </div>
     <div class="biblical">
@@ -30,57 +32,79 @@
             <div class="aaaa">
                 <div class="title">What we do </div>
                 <div>
-                    Wordington offers ‘bespoke’ qualifications for instant career take offs. Our courses are unique and created on the platform of Wordington Experience Enriched Knowledge (WEEK) approach to learning.
+                    Wordington offers ‘bespoke’ qualifications for instant career take offs. Our courses are unique and
+                    created on the platform of Wordington Experience Enriched Knowledge (WEEK) approach to learning.
                 </div>
                 <div>
-                    Wordington courses help to create a unique identity and stand out as a ‘corporate sought after’. 
-                </div>
-                <div>
-                Wordington bespoke qualifications are designed to:
+                    Wordington bespoke qualifications are designed to:
                     <div style="margin-left: 20px;">
-                        Build leadership and managerial expertise. <br> 
-                        Update current leadership and management skills.<br> 
+                        Build leadership and managerial expertise. <br>
+                        Update current leadership and management skills.<br>
                         Develop strategic thinking and foresight.<br>
-                        Lead and manage organisations and its functions.<br> 
-                        Enhance a culture of leadership in organisations.<br> 
+                        Lead and manage organisations and its functions.<br>
+                        Enhance a culture of leadership in organisations.<br>
                     </div>
                 </div>
                 <div>
-                    Wordington bespoke approach identifies key strengths and weaknesses in
-                    individuals which are then analysed by our scholarly teams using our
-                    knowledge-based instruments. The outcome of the analysis is then
-                    processed to draft tailored module/s to design leadership and management
-                    development programmes.
+                    Wordington is a global leadership and management development organisation involved in helping
+                    develop exceptional leaders and managers. We endeavour to transform individuals into versatile
+                    leaders and managers. Our expertise and wealth of experience frames us as unique in helping
+                    individuals to challenge conventions and look outside the frame.
                 </div>
                 <div>
-                    The whole process involves back and forth consultations and brainstorming
-                    with candidates in order to ensure achievement of exceptional skills and
-                    mindsets required for effective leadership and management. This
-                    achievement would eventually contribute to the formation and/or
+                    The changing nature of work, workplace and the workforce have created the need for capability
+                    building and developing leaders and managers for the future. Post-modern global situation needs
+                    leaders and managers who can sail across complexities and unpredictable situations, and lead and
+                    manage changes. In line with these facts, Wordington believes that leadership is an ongoing
+                    phenomenon, inspiring and influencing self, others and organisations; and managers play a
+                    significant role in supporting leadership.
                 </div>
                 <div>
-                    development of leaders and managers who can influence and inspire teams
-                    and organisations.
+                    Wordington strives to develop individuals equipped with skills to lead and or manage so as to
+                    deliver even under uncertain and challenging situations. We closely work with individuals to
+                    discover and build up leadership and management skills. Leaders and managers developed by Wordington
+                    resonates strategic foresight and transformational growth to lead and manage their organisations to
+                    and in new territories and creative domains.
                 </div>
                 <div>
-                    We also maintain a highly effective feedback system throughout the process
-                    which contributes to the continuous improvement of the leadership and
-                    management development process.
+                    Building up on our global expertise in leadership and management development, Wordington believes in
+                    creating concepts, processes and models which could help reimage individuals. We help develop
+                    unparalleled leaders and managers with ingrained creativity and innovation. We achieve this by
+                    valuing every individual and work process as a resource for learning and development. The vibrancy
+                    thus created initiates holistic transformation of individuals.
                 </div>
                 <div>
-                    For more details, please email <a href="mailto:wordingtonschool@gmail.com">wordingtonschool@gmail.com</a> 
+                    Our leadership and management development model encourage focused insight into relevant contexts.
+                    These are then facilitated to process individually and collectively to create a factory of knowledge
+                    which would then be applied to individual, team and organisational situations to create innovative
+                    products, processes and solutions. </div>
+                <div>
+                    Wordington offers bespoke programmes to develop leaders and managers. We have developed three
+                    different categories of programmes, Wordington Certificate, Wordington Diploma and Wordington
+                    Doctorate. These categories help our candidates to apply their work context and experiences into
+                    their learning, discuss and learn with our experts, and get facilitated in design and build
+                    capabilities within functional areas in their organisation. We combine the best of Wordington
+                    experts to impart cutting-edge learning experience. The interactive mix of theory and work
+                    experience embedded in Wordington Experience Enriched Learning (WEEK) is aimed to empower our
+                    candidates with a unique and lifetime learning experience. </div>
+                <div>
+                    Wordington programmes are designed with flexibility in mind so as to accommodate the needs of our candidates’ busy life and professional schedules. Candidates can manage their learning time as per their convenience and earn their qualifications. 
+                </div>
+                <div>
+                    We look forward to seeing you part of this journey called <b>Wordington. </b> 
                 </div>
             </div>
         </div>
     </div>
     <div class="bottom">
-        <div class="nbxxx"> 
+        <div class="nbxxx">
             <a href="#">Privacy policy</a>
             <a href="#">Cookie policy</a>
             <a href="#">Terms of use</a>
         </div>
     </div>
 </body>
+
 </html>
 <script>
     show = document.getElementById("nav-link");
