--- a/html/wordington-certificate-programme-in-biblical-studies.html
+++ b/html/wordington-certificate-programme-in-biblical-studies.html
@@ -3,22 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Wordington Certificate Programme in Biblical Studies/title>
+    <title> Wordington Certificate Programme in Biblical Studies</title>
     <link rel="stylesheet" href="../js/jquery.min.js" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../js/bootstrap.min.js"></script>
     <link rel='stylesheet' href='../css/animate.min.css'>
     <script src='../js/wow.min.js'></script>
     <script src="../js/font.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/leaderShip.css">
 
 </head>
 <body>
-    <div class="itemHeader9 wow bounceInDown">
+    <div class="itemHeader9 wow bounceIn">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-link">
-                    <a href="index.html">Home</a>
+                    <a href="index.html#item9">Home</a>
                 </div>
             </div>
         </div>
