--- a/html/wordington-international-english-communication-programme.html
+++ b/html/wordington-international-english-communication-programme.html
@@ -10,14 +10,16 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel='stylesheet' href='../css/animate.min.css'>
     <script src='../js/wow.min.js'></script>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/leaderShip.css">
 </head>
 <body>
-    <div class="itemHeader14 wow bounceInDown">
+    <div class="itemHeader14 wow bounceIn">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-link" id="nav-link">
-                        <a href="index.html" >Home</a>
+                        <a href="index.html#item14" >Home</a>
                 </div>
             </div>
         </div>
