--- a/html/index.html
+++ b/html/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="container">
             <div>
-                <div id="item1" data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div  data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-leadership-certificate-programme.html">
                         <div class="image">
                             <img src="../image/image1.svg" alt="">
@@ -124,7 +124,7 @@
                         </div>
                     </a>
                 </div>
-                <div id="item2" data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div  data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-diploma-in-leadership-programme.html">
                         <div class="image">
                             <img src="../image/image2.svg" alt="">
@@ -134,7 +134,7 @@
                         </div>
                     </a>
                 </div>
-                <div id="item3" data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div  data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-master-of-leadership-programme.html">
                         <div class="image">
                             <img src="../image/image3.svg" alt="">
@@ -144,7 +144,7 @@
                         </div>
                     </a>
                 </div>
-                <div id="item4" data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div  data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-doctorate-programme-in-leadership.html">
                         <div class="image">
                             <img src="../image/image4.svg" alt="">
@@ -169,7 +169,7 @@
         <div class="container">
             <div>
                 <div data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
-                    <a id="item5" href="wordington-certificate-programme-in-human-resource-management.html">
+                    <a  href="wordington-certificate-programme-in-human-resource-management.html">
                         <div class="image">
                             <img src="../image/image5.svg" alt="">
                         </div>
@@ -178,7 +178,7 @@
                         </div>
                     </a>
                 </div>
-                <div id="item6" data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div  data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-diploma-in-human-resource-management-programme.html">
                         <div class="image">
                             <img src="../image/image6.svg" alt="">
@@ -188,7 +188,7 @@
                         </div>
                     </a>
                 </div>
-                <div id="item7" data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div  data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-master-of-human-resource-management-programme.html">
                         <div class="image">
                             <img src="../image/image7.svg" alt="">
@@ -198,7 +198,7 @@
                         </div>
                     </a>
                 </div>
-                <div id="item8" data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div  data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-doctorate-programme-in-human-resource-management.html">
                         <div class="image">
                             <img src="../image/image8.svg" alt="">
@@ -222,7 +222,7 @@
         </div>
         <div class="container">
             <div>
-                <div id="item9" data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-certificate-programme-in-biblical-studies.html">
                         <div class="image">
                             <img src="../image/image9.svg" alt="">
@@ -232,7 +232,7 @@
                         </div>
                     </a>
                 </div>
-                <div id="item10" data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div  data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-diploma-in-biblical-leadership.html">
                         <div class="image">
                             <img src="../image/image10.svg" alt="">
@@ -242,7 +242,7 @@
                         </div>
                     </a>
                 </div>
-                <div id="item11" data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div  data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-graduate-programme-in-biblical-studies.html">
                         <div class="image">
                             <img src="../image/image11.svg" alt="">
@@ -252,7 +252,7 @@
                         </div>
                     </a>
                 </div>
-                <div id="item12" data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <div data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
                     <a href="wordington-doctorate-programme-in-biblical-studies.html">
                         <div class="image">
                             <img src="../image/image12.svg" alt="">
@@ -274,7 +274,7 @@
             </div>
         </a>
         <div class="container item-alone">
-            <div id="item13" data-wow-delay="0.2s" class="col-xs-12 col-sm-12 col-md-8 item-category wow fadeInUp">
+            <div  data-wow-delay="0.2s" class="col-xs-12 col-sm-12 col-md-8 item-category wow fadeInUp">
                 <a href="wordington-health-and-nursing-programmes.html">
                     <div class="image-1">
                         <img src="../image/cccccc.svg" alt="">
@@ -288,7 +288,7 @@
     </div>
     <div>
         <a href="wordington-international-english-communication-programme.html">
-            <div id="item14" data-wow-delay="0.3s" class="international wow fadeInUp">
+            <div  data-wow-delay="0.3s" class="international wow fadeInUp">
                 <div class="text-content-in-image">
                     Wordington International English Communication Programme
                 </div>
