--- a/html/wordington-doctorate-programme-in-leadership.html
+++ b/html/wordington-doctorate-programme-in-leadership.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-link" id="nav-link">
-                        <a href="index.html#item4">Home</a>
+                        <a href="#" onclick="goBack()">Home</a>
                 </div>
             </div>
         </div>
@@ -30,7 +30,7 @@
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Doctorate in Leadership. </div>
+                <div class="title">Doctorate Programme in Leadership </div>
                 <div>
                     Wordington Doctorate is a highly specialised (4-10 years duration) programme designed for established leaders in their chosen profession. 
                 </div>
@@ -67,4 +67,7 @@
         show.style.right = "-250px";
     }
     new WOW().init();
+    function goBack() {
+       window.history.back();
+    }
 </script>
