--- a/html/index.html
+++ b/html/index.html
@@ -22,34 +22,6 @@
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
-                    <div class="btn-close">
-                        <i class="fas fa-times" onclick="closeMenu()"></i>
-                    </div>
-                    <ul id="closeNavbar">
-                        <li class="white-space">
-                            <div onclick="scrollToElement('html,body', '.content', 0)"> <a href="#"> OUR MODEL</a> </div>
-                        </li>
-                        <li>
-                            <div onclick="scrollToElement('html,body', '.leadership-programmes', 0)"> <a href="#"> LEADERSHIP
-                                    PROGRAMMES</a> </div>
-                        </li>
-                        <li>
-                            <div onclick="scrollToElement('html,body', '.managament-programmes', 0)"> <a href="#">MANAGEMENT
-                                    PROGRAMMES</a> </div>
-                        </li>
-                        <li class="white-space">
-                            <div onclick="scrollToElement('html,body', '.biblical-studies-programmes', 0)"> <a href="#">BIBLICAL
-                                    STUDIES</a> </div>
-                        </li>
-                        <li>
-                            <div onclick="scrollToElement('html,body', '.healh-and-nursing-programmes', 0)"> <a href="#">HEALTH AND NURSING
-                                    STUDIES</a> </div>
-                        </li>
-                        <li>
-                            <div onclick="scrollToElement('html,body', '.international', 0)"> <a href="#">INTERNATIONAL
-                                    ENGLISH COMMUNICATION PROGRAMME</a> </div>
-                        </li>
-                    </ul>
                 </div>
                 <div class="btn-bars">
                     <i class="fas fa-bars" onclick="showMenu()"></i>
@@ -62,6 +34,36 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div>
+        <ul id="closeNavbar">
+            <div class="btn-close">
+                <i class="fas fa-times" onclick="closeMenu()"></i>
+            </div>
+            <li class="white-space">
+                <div onclick="scrollToElement('html,body', '.content', 0)"> <a href="#"> OUR MODEL</a> </div>
+            </li>
+            <li>
+                <div onclick="scrollToElement('html,body', '.leadership-programmes', 0)"> <a href="#"> LEADERSHIP
+                        PROGRAMMES</a> </div>
+            </li>
+            <li>
+                <div onclick="scrollToElement('html,body', '.managament-programmes', 0)"> <a href="#">MANAGEMENT
+                        PROGRAMMES</a> </div>
+            </li>
+            <li class="white-space">
+                <div onclick="scrollToElement('html,body', '.biblical-studies-programmes', 0)"> <a href="#">BIBLICAL
+                        STUDIES</a> </div>
+            </li>
+            <li>
+                <div onclick="scrollToElement('html,body', '.healh-and-nursing-programmes', 0)"> <a href="#">HEALTH AND NURSING
+                        STUDIES</a> </div>
+            </li>
+            <li>
+                <div onclick="scrollToElement('html,body', '.international', 0)"> <a href="#">INTERNATIONAL
+                        ENGLISH COMMUNICATION PROGRAMME</a> </div>
+            </li>
+        </ul>
     </div>
  <a href="about-us.html">
         <div data-wow-delay="0.1s" class="aboutUs wow bounceInDown">
@@ -221,47 +223,46 @@
             Wordington Biblical Studies Programmes
         </div>
         <div class="container">
-            <div>
-                <div data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
-                    <a href="wordington-certificate-programme-in-biblical-studies.html">
-                        <div class="image">
-                            <img src="../image/image9.svg" alt="">
-                        </div>
-                        <div>
-                            Wordington Certificate Programme in Biblical Studies
-                        </div>
-                    </a>
-                </div>
-                <div  data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
-                    <a href="wordington-diploma-in-biblical-leadership.html">
-                        <div class="image">
-                            <img src="../image/image10.svg" alt="">
-                        </div>
-                        <div>
-                            Wordington Diploma in Biblical Leadership
-                        </div>
-                    </a>
-                </div>
-                <div  data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
-                    <a href="wordington-graduate-programme-in-biblical-studies.html">
-                        <div class="image">
-                            <img src="../image/image11.svg" alt="">
-                        </div>
-                        <div>
-                            Wordington Graduate Programme in Biblical studies
-                        </div>
-                    </a>
-                </div>
-                <div data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
-                    <a href="wordington-doctorate-programme-in-biblical-studies.html">
-                        <div class="image">
-                            <img src="../image/image12.svg" alt="">
-                        </div>
-                        <div>
-                            Wordington Doctorate Programme in Biblical studies
-                        </div>
-                    </a>
-                </div>
+            <div data-wow-delay="0.1s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <a href="wordington-certificate-programme-in-biblical-studies.html">
+                    <div class="image">
+                        <img src="../image/image9.svg" alt="">
+                    </div>
+                    <div>
+                        Wordington Certificate Programme in Biblical Studies
+                    </div>
+                </a>
+            </div>
+            <div  data-wow-delay="0.2s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <a href="wordington-diploma-in-biblical-leadership.html">
+                    <div class="image">
+                        <img src="../image/image10.svg" alt="">
+                    </div>
+                    <div>
+                        Wordington Diploma in Biblical Leadership
+                    </div>
+                </a>
+            </div>
+            <div data-wow-delay="0.3s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <a href="wordington-graduate-programme-in-biblical-studies.html">
+                    <div class="image">
+                        <img src="../image/image11.svg" alt="">
+                    </div>
+                    <div>
+                        Wordington Graduate Programme in Biblical studies
+                    </div>
+                </a>
+            </div>
+            
+            <div data-wow-delay="0.4s" class="col-xs-6 col-sm-12 col-md-6 item-category wow fadeInUp">
+                <a href="wordington-doctorate-programme-in-biblical-studies.html">
+                    <div class="image">
+                        <img src="../image/image12.svg" alt="">
+                    </div>
+                    <div>
+                        Wordington Doctorate Programme in Biblical studies
+                    </div>
+                </a>
             </div>
         </div>
     </div>
@@ -317,17 +318,14 @@
 </body>
 </html>
 <script>
-     show = document.getElementById("nav-link");
-     hide = document.getElementById("closeNavbar");
+     show = document.getElementById("closeNavbar");
     function showMenu() {
         show.style.right = "0";
         show.style.display = "block";
-        show.style.transition = "0.7s";
     }
     function closeMenu() {
         show.style.right = "-250px";
         show.style.display = "none";
-        show.style.transition = "0.7s";
     }
     
     function scrollToElement(parentSelector, targetSelector, offsetTop) {
