--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,12 @@
             <div class="text">
                 <div data-wow-delay="4s" class="introduce wow bounceInDown">
                     <div class="textUp">Wordington Centre</div>
-                    for Leadership and Management Development
+                    <div style="font-style: italic;text-transform: none;">
+                        for
+                    </div> <br>
+                    <div>
+                        Leadership and Management Development
+                    </div>
                 </div>
             </div>
         </div>
@@ -66,7 +71,7 @@
         </ul>
     </div>
  <a href="about-us.html">
-        <div data-wow-delay="0.1s" class="aboutUs wow bounceInDown">
+        <div data-wow-delay="0.5s" class="aboutUs wow fadeInUp">
             <div>
                 ABOUT-US
             </div>
