--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
     </div>
     <div>
         <div class="container">
-            <div id="closeNavbar">
+            <div id="closeNavbar" class="col-xs-12 col-sm-12 col-md-12">
                 <div class="btn-close">
                     <i class="fas fa-times" onclick="closeMenu()"></i>
                 </div>
@@ -57,7 +57,7 @@
                             STUDIES</a> </div>
                      <div onclick="scrollToElement('html,body', '.healh-and-nursing-programmes', 0)"> <a href="#">HEALTH AND NURSING
                             STUDIES</a> </div>
-                    <div onclick="scrollToElement('html,body', '.international', 0)"> <a href="#">INTERNATIONAL
+                    <div class="xx1" onclick="scrollToElement('html,body', '.international', 0)"> <a href="#">INTERNATIONAL
                             ENGLISH COMMUNICATION PROGRAMME</a> </div>
             </div>
         </div>
