--- a/html/index.html
+++ b/html/index.html
@@ -65,7 +65,7 @@
  <a href="about-us.html">
         <div data-wow-delay="0.5s" class="aboutUs wow fadeInUp">
             <div>
-               about-us
+               About-us
             </div>
         </div>
     </a>
